<resources>
    <string name="app_name">Gloof</string>
    <string name="version_number">1.0</string>
    <string name="About">About</string>
    <string name="Gloof_summary">This is an entertainment software designed and created by Gloof Kenya.Terms and Conditions apply.</string>
    <string name="Version">Version</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Gloofer</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_mary">Sign in</string>
    <string name="title_activity_maps">Map</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_required">This field is required</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    //activity_register
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="signin_long">Already have an account? Sign in here.</string>
    <string name="username_hint">Username</string>
    <string name="hint_password">Password</string>
    //activity_login
    <string name="register_long">Don\'t have an account? Sign up here.</string>
    <string name="forgot_password">Forgot your password? Reset here.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="email">Email</string>
    <string name="RegisterActivity">Registration</string>
    <string name="PasswordReset">Reset Password</string>
    <string name="logout">LOG OUT</string>
    <string name="email_verify">Verify your E-Mail Address.</string>
    <string name="verify">VERIFY</string>
    <string name="name_activityVerifyEmail">Gloof User</string>
    <string name="email_activityVerifyEmail">Email</string>
    <string name="hi_activityVerifyEmail">Hi </string>
    <string name="IME_create_account">Create</string>
    <string name="title_activity_verify_email">VerifyemailActivity</string>
</resources>
