<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    style="@style/Theme.AppCompat.NoActionBar"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/btnVerifyEmail_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/hi_activityVerifyEmail"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/hi_activityVerifyEmail"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignRight="@+id/alert_activityVerifyEmail"
        android:layout_alignEnd="@+id/alert_activityVerifyEmail"
        android:layout_marginRight="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="18dp" />


    <ImageView
        android:id="@+id/alert_activityVerifyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        app:srcCompat="@drawable/ic_errorblack_30dp"
        android:layout_above="@+id/verifyEmailAddress"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/verifyEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/email_verify"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/verify" />

        <Button
            android:id="@+id/signoff"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/logout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_above="@+id/alert_activityVerifyEmail"
        android:layout_toRightOf="@+id/btnVerifyEmail_progress"
        android:layout_toEndOf="@+id/btnVerifyEmail_progress"
        android:layout_marginBottom="13dp">

        <TextView
            android:id="@+id/email_activityVerifyEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:gravity="center"
            android:text="@string/email_activityVerifyEmail"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <TextView
        android:id="@+id/name_activityVerifyEmail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alert_activityVerifyEmail"
        android:layout_alignStart="@+id/alert_activityVerifyEmail"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/name_activityVerifyEmail"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:layout_alignTop="@+id/hi_activityVerifyEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>